# atmega328-csp

./: .gitmodules  configure  cross_file.txt  flash  meson.build  runbuild
lib/: FreeRTOSConfig.h  meson.build
lib/start/: meson.build
lib/start/src/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart
lib/start/src/config/: clock_config.h
lib/start/src/examples/include/: usart_basic_example.h
lib/start/src/examples/src/: usart_basic_example.c
lib/start/src/gcc/: Makefile
lib/start/src/iar/: Makefile
lib/start/src/include/: atmel_start_pins.h  driver_init.h  usart_basic.h
lib/start/src/src/: driver_init.c  i2c_master.c  spi_basic.c  usart_basic.c
lib/start/src/xc8/: Makefile
src/: apptasks.c  main.c  twi.h
